[workspace]
description = "Various experiments with interactive multimedia algorithms"
members = [
  "math",
  "tracer",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "MIT"
authors = ["Cooper Johnson <lavosprime@gmail.com>"]

# Keep release builds incremental, but disable unwinding.
[profile.release]
panic = "abort"
incremental = true
codegen-units = 16 # lavosprime home PC is still only 4 cores

# Optimize dev builds somewhat, and disable unwinding, but keep debug info.
[profile.dev]
opt-level = 1
panic = "abort"
debug = true

# Optimize dependencies in dev.
[profile.dev.package."*"]
opt-level = 3
debug = true
incremental = false
codegen-units = 16

# Fully optimize build scripts and proc-macros.
[profile.dev.build-override]
opt-level = 3
debug = false
incremental = false
codegen-units = 16
debug-assertions = false
overflow-checks = false

# Fully optimize build scripts and proc-macros.
[profile.release.build-override]
opt-level = 3
debug = false
incremental = false
codegen-units = 16
debug-assertions = false
overflow-checks = false
